--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container">
     <section class="mb-4">
-      <div class="row animated fadeIn delay-2s justify-content-center justify-content-md-end">
+      <div class="row animate__animated animate__fadeIn animate__delay-2s justify-content-center justify-content-md-end">
         <div class='col-11 col-md-5'>
           <h1>Sign Up</h1>
           <p>Already have an account? Then please <a href="#" style="color:blue;">sign in</a></p>
