--- a/templates/registration/activation-error.html
+++ b/templates/registration/activation-error.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="container">
-    <div class='row align-items-center animated fadeIn delay-2s justify-content-center'>
+    <div class='row align-items-center animate__animated animate__fadeIn animate__delay-2s justify-content-center'>
             <div class="col-11 col-md-5 text-center my-5">
                 {% if error %}
                     <h2 class=''>Activation Error. Please try again.</h2>
